--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "babel-production": "NODE_ENV=production COMPILER_ENV=server babel -x \".tsx,.ts\" --out-dir dist --config-file ./.babelrc.server.prod.json src",
     "start": "node dist/app.js",
     "build": "npm run webpack-production && npm run babel-production",
-    "test": "standardx",
-    "lint": "standardx --fix"
+    "test": "standardx \"**/*.tsx\" \"**/*.ts\"",
+    "lint": "standardx \"**/*.tsx\" \"**/*.ts\" --fix"
   },
   "standardx": {
     "ignore": [
