--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "mini-css-extract-plugin": "^0.9.0",
     "nodemon": "^2.0.4",
     "raw-loader": "^4.0.1",
+    "sass": "^1.26.10",
+    "sass-loader": "^9.0.3",
     "standardx": "^5.0.0",
     "ts-loader": "^8.0.2",
     "typescript-loader": "^1.1.3",
