--- a/.babelrc.json
+++ b/.babelrc.json
@@ -20,7 +20,8 @@
     ]
   ],
   "plugins": [
-    "@babel/plugin-proposal-class-properties"
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-transform-regenerator"
   ],
   "ignore": [
     "src/static/**/*"
