--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,17 @@
 {
     "files.exclude": {
-        "**/.git": true,
-        "**/.svn": true,
-        "**/.hg": true,
-        "**/CVS": true,
-        "**/.DS_Store": true,
-        "**/build/": true,
-        "dist/": true,
-        "node_modules": true,
-        ".vscode/": true,
-        ".babelrc.json": true,
         ".babelrc.server.json": true,
         ".babelrc.server.prod.json": true,
-        "script.js": true,
-        ".eslintrc": true
+        ".eslintrc": true,
+        ".vscode/": true,
+        "**/.DS_Store": true,
+        "**/.git": true,
+        "**/.hg": true,
+        "**/.svn": true,
+        "**/build/": true,
+        "**/CVS": true,
+        "dist/": true,
+        "node_modules": true,
+        "script.js": true
     }
 }
