--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "@types/express": "^4.17.7",
     "@types/react": "^16.9.44",
     "@types/react-dom": "^16.9.8",
+    "core-js": "^3.9.1",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "regenerator-runtime": "^0.13.7",
     "typescript": "^3.9.7"
   },
   "devDependencies": {
@@ -38,6 +40,7 @@
     "@babel/core": "^7.11.1",
     "@babel/node": "^7.10.5",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-transform-regenerator": "^7.12.13",
     "@babel/polyfill": "^7.10.4",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
