feat: add support for HMR
Signed-off-by: Anshuman Chhapolia <anshuman@smoketrees.in>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,7 @@
         "**/build/": true,
         "**/CVS": true,
         "dist/": true,
-        "node_modules": true,
-        "script.js": true
-    }
+        "node_modules": true
+    },
+    "standard.engine": "standardx"
 }
