--- a/package.json
+++ b/package.json
@@ -27,13 +27,18 @@
     "@types/express": "^4.17.7",
     "@types/react": "^16.9.44",
     "@types/react-dom": "^16.9.8",
+    "@types/webpack-dev-middleware": "^4.3.0",
+    "@types/webpack-hot-middleware": "^2.25.4",
     "core-js": "^3.9.1",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-refresh-webpack-plugin": "^0.1.0",
     "regenerator-runtime": "^0.13.7",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.7",
+    "webpack-dev-middleware": "^4.3.0",
+    "webpack-hot-middleware": "^2.25.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.5",
@@ -46,6 +51,7 @@
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
     "@babel/register": "^7.10.5",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
     "babel-loader": "^8.1.0",
@@ -59,6 +65,7 @@
     "mini-css-extract-plugin": "^1.3.8",
     "nodemon": "^2.0.4",
     "raw-loader": "^4.0.1",
+    "react-refresh": "^0.10.0",
     "sass": "^1.26.10",
     "sass-loader": "^9.0.3",
     "standardx": "^5.0.0",
