--- a/package.json
+++ b/package.json
@@ -31,17 +31,7 @@
     "typescript": "^3.9.7"
   },
   "devDependencies": {
-    "regenerator-runtime": "^0.13.7",
-    "@types/ejs": "^3.0.4",
-    "@types/express": "^4.17.7",
-    "@types/react": "^16.9.44",
-    "@types/react-dom": "^16.9.8",
-    "@types/webpack-dev-middleware": "^4.3.0",
-    "@types/webpack-hot-middleware": "^2.25.4",
-    "react-refresh-webpack-plugin": "^0.1.0",
-    "webpack-dev-middleware": "^4.3.0",
-    "webpack-hot-middleware": "^2.25.0",
-    "@babel/cli": "^7.10.5",
+    "@babel/cli": "^7.14.5",
     "@babel/core": "^7.11.1",
     "@babel/node": "^7.10.5",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
@@ -52,12 +42,19 @@
     "@babel/preset-typescript": "^7.10.4",
     "@babel/register": "^7.10.5",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "@types/ejs": "^3.0.4",
+    "@types/express": "^4.17.7",
+    "@types/react": "^16.9.44",
+    "@types/react-dom": "^16.9.8",
+    "@types/webpack-dev-middleware": "^4.3.0",
+    "@types/webpack-hot-middleware": "^2.25.4",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-file-loader": "^2.0.0",
     "babel-plugin-transform-require-ignore": "^0.1.1",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^9.0.0",
     "css-loader": "^5.0.2",
     "eslint-plugin-react": "^7.20.5",
     "file-loader": "^6.2.0",
@@ -66,12 +63,16 @@
     "nodemon": "^2.0.4",
     "raw-loader": "^4.0.1",
     "react-refresh": "^0.10.0",
+    "react-refresh-webpack-plugin": "^0.1.0",
+    "regenerator-runtime": "^0.13.7",
     "sass": "^1.26.10",
     "sass-loader": "^9.0.3",
     "standardx": "^5.0.0",
     "ts-loader": "^8.0.2",
     "typescript-loader": "^1.1.3",
     "webpack": "^5.24.2",
-    "webpack-cli": "^4.5.0"
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-middleware": "^4.3.0",
+    "webpack-hot-middleware": "^2.25.0"
   }
 }
