--- a/package.json
+++ b/package.json
@@ -23,11 +23,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "core-js": "^3.9.1",
-    "ejs": "^3.1.3",
-    "express": "^4.17.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "@types/compression": "^1.7.2",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
+    "compression": "^1.7.4",
+    "ejs": "^3.1.8",
+    "express": "^4.18.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router": "^6.4.2",
+    "react-router-dom": "^6.4.2",
     "typescript": "^3.9.7"
   },
   "devDependencies": {
@@ -44,8 +49,6 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@types/ejs": "^3.0.4",
     "@types/express": "^4.17.7",
-    "@types/react": "^16.9.44",
-    "@types/react-dom": "^16.9.8",
     "@types/webpack-dev-middleware": "^4.3.0",
     "@types/webpack-hot-middleware": "^2.25.4",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
