--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-dom": "^18.2.0",
     "react-router": "^6.4.2",
     "react-router-dom": "^6.4.2",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.7",
+    "webpack-plugin-replace": "^1.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.5",
@@ -76,6 +77,9 @@
     "webpack": "^5.24.2",
     "webpack-cli": "^4.5.0",
     "webpack-dev-middleware": "^4.3.0",
-    "webpack-hot-middleware": "^2.25.0"
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-manifest-plugin": "^5.0.0",
+    "webpack-manifest-replace-plugin": "^2.0.0",
+    "nanoid": "^3.1.25"
   }
 }
