--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-router": "^6.4.2",
     "react-router-dom": "^6.4.2",
     "typescript": "^3.9.7",
@@ -50,6 +51,7 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@types/ejs": "^3.0.4",
     "@types/express": "^4.17.7",
+    "@types/react-helmet": "^6.1.5",
     "@types/webpack-dev-middleware": "^4.3.0",
     "@types/webpack-hot-middleware": "^2.25.4",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
@@ -64,6 +66,7 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.2.0",
     "mini-css-extract-plugin": "^1.3.8",
+    "nanoid": "^3.1.25",
     "nodemon": "^2.0.4",
     "raw-loader": "^4.0.1",
     "react-refresh": "^0.10.0",
@@ -79,7 +82,6 @@
     "webpack-dev-middleware": "^4.3.0",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-manifest-plugin": "^5.0.0",
-    "webpack-manifest-replace-plugin": "^2.0.0",
-    "nanoid": "^3.1.25"
+    "webpack-manifest-replace-plugin": "^2.0.0"
   }
 }
